carrinho.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
  }
  
  html, body {
    width: 100%;
    height: 100%;
    margin: 0;
    padding: 0;
    box-sizing: border-box;
  }

body{
    background-image: url(img/pizza2.jpg);
   
}
    .container {
    display: flex;
   margin: 4rem auto;
    width: 32rem;
    height: auto;
    }
    
    nav {
        width: 100%;
        height: 8rem;
        margin-top: 0 auto;

          background-color: rgb(192, 18, 18);
          }
    
         .logo{
            display: flex;
            height: 6rem;
            align-items: center;
            padding-top: 1.5rem;
            margin-left: 18.1rem;
         }
          

    .card{
   width: 100%;
   padding: 1.4rem;
    display: block;
    background-color: white;
    border-radius: 8px;
    }

    
    .lista{
     margin: 2rem;
     justify-content: center;
     align-items: center;
    }
    
    h1{
    text-align: center;
    margin: 1.6rem;
    padding: 2rem;
    }
    
    .botoes{
    margin: 2.4rem;
    display: flex;
    gap: 2rem;
    justify-content: center;
    }
    
    .btn-confirmar, .btn-inicial{
    padding: 0.3rem 3rem;
    background-color: #007bff;
    color: white;
    border: none;
    cursor: pointer;
    border-radius: 0.6rem;
    transition: background-color 0.3s ease;
    
    }
    .btn-confirmar:hover,
    .btn-inicial:hover {
    background-color: #0056b3;
    }
    
    p{
    font-weight: bold;
    margin-top: auto;
    display: flex;
    gap: 10px;
    justify-content: center;
    color: brown;
    }
    #lista-carrinho li {
    display: flex;
    align-items: center;
    gap: 12px;
    margin-bottom: 10px;
    }
    .nome-produto {
    font-weight: bold;
    font-size: 1.2rem;
    color: #2c3e50;
    margin-right: 8px;
    }
    .preco-produto {
    color: #27ae60; 
    font-weight: 600;
    font-size: 1.1rem;
    }
    .btn-remover {
    background-color: #e74c3c; 
    border: none;
    color: white;
    margin-left: 0.5rem;
    padding: 0.4rem 1rem;
    border-radius: 5px;
    cursor: pointer;
    font-weight: bold;
    transition: background-color 0.3s ease;
    }
    .btn-remover:hover {
    background-color: #c0392b; 
    }
  

